Added account wallet address on top right corner of application

--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,7 @@
             </li>
         </ul>
         </div>
+        <div id="accountaddress" class="container-fluid d-flex justify-content-end"></div>
     </nav>
 
     <div class="container-fluid", style="padding-top: 70px;">
