Added user address on top right corner of application and added logout function

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,8 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- Google Icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -67,6 +69,7 @@
             </li>
         </ul>
         </div>
+        <div id="accountaddress" class="container-fluid d-flex justify-content-end"></div>
     </nav>
 
     <div class="container-fluid", style="padding-top: 70px;">
