Fixed loading page interaction

--- a/src/index.html
+++ b/src/index.html
@@ -40,12 +40,12 @@
         $(window).load(function() {
           App.init();
         });
-        $("#mainContent").on('DOMSubtreeModified', function(){
+        /*$("#mainContent").on('DOMSubtreeModified', function(){
           $('#spinnerwrapper').show();
           setTimeout(() => {
             $('#spinnerwrapper').hide();
           }, 1000);
-        });
+        });*/
       });
     </script>
 
