--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,9 @@
             <li class="nav-item">
             <a class="nav-link" href="#" onclick="App.displayTeam()">Team</a>
             </li>
+            <li class="nav-item">
+            <a class="nav-link" href="#" onclick="App.displayCourses()">Courses</a>
+            </li>
         </ul>
         </div>
     </nav>
