Added basic footer to the application

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
         <div id="accountaddress" class="container-fluid d-flex justify-content-end"></div>
     </nav>
 
-    <div class="container-fluid", style="padding-top: 70px;">
+    <div class="container-fluid", style="padding-top: 70px; min-height: 400px; margin-bottom: 100px; clear: both;">
       <div id="spinnerwrapper">
         <div class="d-flex flex-column align-items-center justify-content-center">
           <div class="spinner-border text-primary" role="status" aria-hidden="true"></div>
@@ -83,6 +83,11 @@
         <div id="mainContent"></div>
         <div id="errorMsg"></div>
     </div>
-
+    
+    <footer class="bg-light text-center text-lg-start py-3 fixed-bottom">
+      <div class="container">
+        <span class="text-muted">Authors: Eros Rigaba, Stefano Genetti, Pietro Fronza</span>
+      </div>
+    </footer>
   </body>
 </html>
