--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
     </style>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Google Icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery.min.js"></script>
@@ -92,7 +94,7 @@
         <div id="accountaddress" class="container-fluid d-flex justify-content-end"></div>
     </nav>
 
-    <div class="container-fluid", style="padding-top: 70px;">
+    <div class="container-fluid", style="padding-top: 70px; min-height: 400px; margin-bottom: 100px; clear: both;">
       <div id="spinnerwrapper">
         <div class="d-flex flex-column align-items-center justify-content-center">
           <div class="spinner-border text-primary" role="status" aria-hidden="true"></div>
