--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,7 @@
         </div>
         
       </div>
-        <div id="mainContent"></div>
+        <div id="mainContent" class="p-3"></div>
         <div id="errorMsg"></div>
     </div>
 
